@@ -36,6 +36,8 @@ Changes
 
 * Added zframe_eq method to compare two frames' size and content.
 
+* Changed zmsg_load to append to an optional existing message.
+
 
 czmq version 1.0.0 (stable), released on 2011/04/26
 ===================================================
